Rimozione div per immagini assenti

--- a/MIIDMApp-master/reperto.html
+++ b/MIIDMApp-master/reperto.html
@@ -21,7 +21,7 @@
 	<div class = "rep_descrizioneTitle">Materiali</div>
 	<div class = "rep_descrizione" id = "rep_materiali">Materiali</div>
 
-	<div class = "rep_separe"></div>
+	<div class = "rep_separe" id="separe_media"></div>
 	<div class = "rep_descrizioneTitle" id="rep_media">Media</div>
 	<div id = "container_immagini">
 		<!--Le immagini andranno inserite qui-->
