Risolta mancata visualizzazione delle immagini

--- a/MIIDMApp-master/reperto.html
+++ b/MIIDMApp-master/reperto.html
@@ -20,7 +20,8 @@
 	<div class = "rep_separe"></div>
 	<div class = "rep_descrizioneTitle">Materiali</div>
 	<div class = "rep_descrizione" id = "rep_materiali">Materiali</div>
-
+	
+	<div id = "container_div_img">
 	<div class = "rep_separe" id="separe_media"></div>
 	<div class = "rep_descrizioneTitle" id="rep_media">Media</div>
 	<div id = "container_immagini">
@@ -38,7 +39,7 @@
 	</div>
 
 	<img id = "immagine_grande" alt = "Foto del reperto"/>
-
+	</div>
     <footer id = "chiudi_pagina_reperto" onclick = "chiudiPaginaReperto()">
         <img src = "res/chiudi.svg" />
     </footer>
