aggiunta id separa descrizione

--- a/MIIDMApp-master/reperto.html
+++ b/MIIDMApp-master/reperto.html
@@ -7,11 +7,11 @@
 	<div class = "rep_descrizione" id = "rep_autore"></div>
 
 	<div class = "rep_separe"></div>
-	<div class = "rep_descrizioneTitle">Didascalia</div>
+	<div class = "rep_descrizioneTitle" id="rep_descrizioneTitle">Didascalia</div>
 	<div class = "rep_descrizione" id = "rep_descrizione">
 	</div>
 
-	<div class = "rep_separe"></div>
+	<div class = "rep_separe" id="separaDescr"></div>
 	<div class = "rep_descrizioneTitle">Dimensioni</div>
 	<div id = "rep_dimensioni">
 		<!--Verranno renderizzate da JS-->
