modifica visualizzazione materiali se questi non ci sono

--- a/MIIDMApp-master/reperto.html
+++ b/MIIDMApp-master/reperto.html
@@ -7,7 +7,7 @@
 	<div class = "rep_descrizione" id = "rep_autore"></div>
 
 	<div class = "rep_separe"></div>
-	<div class = "rep_descrizioneTitle" id="rep_descrizioneTitle">Didascalia</div>
+	<div class = "rep_descrizioneTitle" id ="titDidascalia">Didascalia</div>
 	<div class = "rep_descrizione" id = "rep_descrizione">
 	</div>
 
@@ -17,8 +17,8 @@
 		<!--Verranno renderizzate da JS-->
 	</div>
 
-	<div class = "rep_separe"></div>
-	<div class = "rep_descrizioneTitle">Materiali</div>
+	<div class = "rep_separe" id="separaMat"></div>
+	<div class = "rep_descrizioneTitle" id="titMateriali">Materiali</div>
 	<div class = "rep_descrizione" id = "rep_materiali">Materiali</div>
 	
 	<div id = "container_div_img">
