Pagina info in Landscape

--- a/MIIDMApp-master/info.html
+++ b/MIIDMApp-master/info.html
@@ -24,7 +24,7 @@
       <h5><center>Lun. - Ven.<br>09:00 - 13:00<br>16:00 - 18:00<br><br>Sabato<br>09:00 - 13:00</center></h5>
     </article>
     <div id = "loghi_social">
-      <a href = "../qrCode/script/easterEgg.html"> <img src = "res/facebook.png" /> </a>
+      <a href = ""> <img src = "res/facebook.png" /> </a>
       <a href = "https://www.instagram.com/miidm_isis/"> <img src = "res/instagram.png" /> </a>
       <img src = "res/share.png" id = "share"/>
     </div>
