ho vinto 1vs1 contro il segnalaUnBug.css

--- a/MIIDMApp-master/navbar.html
+++ b/MIIDMApp-master/navbar.html
@@ -36,7 +36,7 @@
   <div id = "divOscuramento" onclick="navbar_closeSidenav()"></div>
 
 <script>
-  if(window.innerHeight > window.innerWidth)
+  if(window.innerHeight >= window.innerWidth)
   {
     function navbar_openSidenav() {
       document.getElementById("navbar_mySidenav").style.left = "0";
