--- a/MIIDMApp-master/segnalaUnBug.html
+++ b/MIIDMApp-master/segnalaUnBug.html
@@ -3,19 +3,21 @@
       <h1 id = "segnalaUnBug_titolo">Segnala un bug</h1>
     </div>
     <div id = "segnalaUnBug_divForm">
-      <div>
+      <div id = "credenziali">
         <h1 class = "segnalaUnBug_titoloDivForm">Inserisci dati personali</h1>
         <input type="text" id = "nome" placeholder="Nome">
         <input type="text" id = "cognome" placeholder="Cognome" class = "segnalaUnBug_altriInput">
         <input type="text" id = "indirizzoEmail" placeholder="E-mail" class = "segnalaUnBug_altriInput">
       </div>
-      <div style = "margin-top: 2vh">
+      <div id= "inviaemail">
         <h1 class = "segnalaUnBug_titoloDivForm">Scrivi e-mail</h1>
         <input type="text" id = "oggettoEmail" placeholder="Oggetto">
         <textarea type="text" id = "testoEmail" placeholder="Inserisci il testo dell'e-mail..." class = "segnalaUnBug_altriInput"></textarea>
-        <button id = "segnalaUnBug_tastoInvia" class="g-recaptcha"
-                data-sitekey="6LdtJuIUAAAAADtjQhJmfwJzEO_JCby8Lm60ty27"
-                data-callback='inviaEmail' data-badge="inline">Invia!</button>
+        <div id="invia">
+          <button id = "segnalaUnBug_tastoInvia" class="g-recaptcha"
+                  data-sitekey="6LdtJuIUAAAAADtjQhJmfwJzEO_JCby8Lm60ty27"
+                  data-callback='inviaEmail' data-badge="inline">Invia!</button>
+        </div>
       </div>
     </div>
     <footer id = "segnalaUnBug_footer" onclick = "chiudiFinestraSegnalazioneBug()">
