titolo MIIDM reso clicclabile e riconducibile alla home

--- a/MIIDMApp-master/navbar.html
+++ b/MIIDMApp-master/navbar.html
@@ -1,6 +1,6 @@
 <nav id = "navbar_topNav">
   <div class = "navbar_divIconeTopNav"><img class = "navbar_iconeTopNav" id = "hamburgerButton" src = "./res/hamburgerButton.svg" onclick="navbar_openSidenav()"></img></div>
-  <div id = "navbar_divTitoloTopNav"><p id = "navbar_titoloTopNav">MIIDM App</p></div>
+  <div id = "navbar_divTitoloTopNav"><a id = "navbar_titoloTopNav">MIIDM App</a></div>
   <div class = "navbar_divIconeTopNav"><img id = "navbar_logoTopNav" class = "navbar_iconeTopNav" src = "./res/logo2.png"></img></div>
 </nav>
   <nav id="navbar_mySidenav">
