--- a/MIIDMApp-master/navbar.html
+++ b/MIIDMApp-master/navbar.html
@@ -2,6 +2,8 @@
   <div class = "navbar_divIconeTopNav"><img class = "navbar_iconeTopNav" id = "hamburgerButton" src = "./res/hamburgerButton.svg" onclick="navbar_openSidenav()"></img></div>
   <div id = "navbar_divTitoloTopNav"><a id = "navbar_titoloTopNav">MIIDM App</a></div>
   <div class = "navbar_divIconeTopNav"><img id = "navbar_logoTopNav" class = "navbar_iconeTopNav" src = "./res/logo2.png"></img></div>
+  <div class = "navbar_divIconeTopNav"><img id = "navbar_logoTopNavSearch" class = "navbar_iconeTopNav" src = "./res/search_e.svg"></img></div>
+
 </nav>
   <nav id="navbar_mySidenav">
     <div class = "navbar_divSelezioniSidenav" id = "esplora_sidebar">
