Risolto peoblema condivisione Eliminazione file inutilizzati

--- a/MIIDMApp-master/bottom-navbar.html
+++ b/MIIDMApp-master/bottom-navbar.html
@@ -49,7 +49,7 @@
                                 document.getElementById('bottom-nav_button-qr').style.bottom = "3vh";
                                 document.getElementById('bottom-nav_button-qr').style.transform = "rotate(0deg)";
                                 document.getElementById('bottom-nav_button-qr').style.zIndex = "3";
-                                document.getElementById('qrc').src = "../res/iconaFotografia.png";
+                                document.getElementById('qrc').src = "/res/iconaFotografia.png";
 
                                 caricaPaginaQR();
                             }
