--- a/MIIDMApp-master/reperto.html
+++ b/MIIDMApp-master/reperto.html
@@ -30,11 +30,11 @@
 	<div id = "show_immagini">
 		<!--Le immagini andranno renderizzate qui-->
 		<button  class = "rep_freccia" id = "rep_but_left "onclick="plusDivs(-1)">
-            <img src = "./res/frecciaIndietro.svg" />
+            <img src = "res/frecciaIndietro.svg" />
   	  	</button>
 		<img id = "immagineDaMostrare" />
 		<button  class = "rep_freccia" id = "rep_but_right" onclick="plusDivs(1)">
-            <img src = "./res/frecciaIndietro.svg" />
+            <img src = "res/frecciaAvanti>.svg" />
 		</button>
 	</div>
 
