Modificati svg lenti ricerca Modificato style lente ricerca aggiunto svg freccia avanti

--- a/MIIDMApp-master/reperto.html
+++ b/MIIDMApp-master/reperto.html
@@ -34,7 +34,7 @@
   	  	</button>
 		<img id = "immagineDaMostrare" />
 		<button  class = "rep_freccia" id = "rep_but_right" onclick="plusDivs(1)">
-            <img src = "res/frecciaAvanti>.svg" />
+            <img src = "res/frecciaAvanti.svg" />
 		</button>
 	</div>
 
