Non so che succede

--- a/MIIDMApp-master/info.html
+++ b/MIIDMApp-master/info.html
@@ -16,7 +16,7 @@
       <img src = "res/phone.png" onclick = "window.location = 'tel:1234567890'" />
       <a href = ""> <img src = "res/facebook.png" /> </a>
       <a href = "https://www.instagram.com/miidm_isis/"> <img src = "res/instagram.png" /> </a>
-      <img src = "res/share.png" id = "share" onclick="condividi()">
+      <img src = "res/share.png" id = "share" onclick="condividi()" />
     </div>
   </article> 
   <article class = "informazione" id = "Orari">
@@ -27,10 +27,6 @@
     <h1><strong><center>Crediti</center></strong></h1>
     <h5><center>&#149;5^A informatica<br>&#149;Prof. De Bonis Michelangelo<br>&#149;Prof. Tamburrano Pietro<br><br></center></h5>
   </div>  
-  <!--<div id = "loghi_social">
-    <a href = ""> <img src = "res/facebook.png" /> </a>
-    <a href = "https://www.instagram.com/miidm_isis/"> <img src = "res/instagram.png" /> </a>
-  </div>-->
 </div>
 
 <script>
