--- a/MIIDMApp-master/navbar.html
+++ b/MIIDMApp-master/navbar.html
@@ -7,7 +7,7 @@
       <img id="navbar_logoTopNavSearch" src="./res/search_e2.svg"/>
     </button>
     <script>
-      if(window.innerHeight < window.innerWidth)
+      if(Device_Type() == 'Desktop' /*window.innerHeight < window.innerWidth*/)
       {
           /*function animOptSF(){ //operazioni dopo 150ms dal click di Cerca
           document.getElementById('homeE').style.top = "calc(45% - 2.25vh)";
@@ -71,7 +71,7 @@
     navbar_closeSidenav();
     });
 
-  if(window.innerHeight >= window.innerWidth)
+  if(Device_Type() == 'Mobile' /*window.innerHeight >= window.innerWidth*/)
   {
     function navbar_openSidenav() {
       document.getElementById("navbar_mySidenav").style.left = "0";
@@ -113,6 +113,26 @@
       document.getElementById('divOscuramento').style.zIndex = "-100";
       controllaTrasparenzaTopNavbar();
     }
+
+    function Device_Type() {
+    var Return_Device; 
+    if(/(up.browser|up.link|mmp|symbian|smartphone|midp|wap|phone|android|iemobile|w3c|acs\-|alav|alca|amoi|audi|avan|benq|bird|blac|blaz|brew|cell|cldc|cmd\-|dang|doco|eric|hipt|inno|ipaq|java|jigs|kddi|keji|leno|lg\-c|lg\-d|lg\-g|lge\-|maui|maxo|midp|mits|mmef|mobi|mot\-|moto|mwbp|nec\-|newt|noki|palm|pana|pant|phil|play|port|prox|qwap|sage|sams|sany|sch\-|sec\-|send|seri|sgh\-|shar|sie\-|siem|smal|smar|sony|sph\-|symb|t\-mo|teli|tim\-|tosh|tsm\-|upg1|upsi|vk\-v|voda|wap\-|wapa|wapi|wapp|wapr|webc|winw|winw|xda|xda\-) /i.test(navigator.userAgent)) {
+        if(/(tablet|ipad|playbook)|(android(?!.*(mobi|opera mini)))/i.test(navigator.userAgent)) {
+            Return_Device = 'Tablet';
+        }
+        else {
+            Return_Device = 'Mobile';
+        }
+    }
+    else if(/(tablet|ipad|playbook)|(android(?!.*(mobi|opera mini)))/i.test(navigator.userAgent)) {
+        Return_Device = 'Tablet';
+    }
+    else {
+        Return_Device = 'Desktop';
+    }
+
+    return Return_Device;
+}
 
   }
   
