--- a/MIIDMApp-master/qrscanner.html
+++ b/MIIDMApp-master/qrscanner.html
@@ -2,17 +2,12 @@
 <div id="istruzioni">
   <span>Fai una foto al qr code del reperto </br> per visualizzarne la scheda</span>
 </div>
-<input type = "range" value = "50" style = "display: none;" />
+<!--<input type = "range" value = "50" style = "display: none;"/>-->
 <div id="contenitore_video">
-  <div class="inquadratura" id="inquadratura_tl"></div>
-  <div class="inquadratura" id="inquadratura_tr"></div>
-  <div class="inquadratura" id="inquadratura_bl"></div>
-  <div class="inquadratura" id="inquadratura_br"></div>
-  <video id="video" autoplay></video>
+  <video autoplay="true" id="video"></video>
 </div>
 <canvas id="#img_scattata" width = "600" height="600"></canvas>
-<div id = "takePhotoButton" onclick = "onTakePhotoButtonClick()" style = "opacity: 0;">
+
+  <div id = "takePhotoButton" style = "opacity: 0;"></div>
 </div>
-<audio id="scatto">
-  <source src="res/suonoFoto.mp3" type="audio/mpeg">
-</audio>
+
