sostituzione del bottone fotografia con bottone qrcode

--- a/MIIDMApp-master/qrscanner.html
+++ b/MIIDMApp-master/qrscanner.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <div id="istruzioni">
-  <span>Fai una foto al qr code del reperto </br> per visualizzarne la scheda</span>
+  <span>Inquadra il qr code del reperto </br> per visualizzarne la scheda</span>
 </div>
-<!--<input type = "range" value = "50" style = "display: none;"/>-->
 <div id="contenitore_video">
   <video autoplay="true" id="video"></video>
 </div>
 <canvas id="#img_scattata" width = "600" height="600"></canvas>
-
-  <div id = "takePhotoButton" style = "opacity: 0;"></div>
-</div>
-
