--- a/MIIDMApp-master/bottom-navbar.html
+++ b/MIIDMApp-master/bottom-navbar.html
@@ -49,9 +49,13 @@
                                 document.getElementById('bottom-nav_button-qr').style.bottom = "3vh";
                                 document.getElementById('bottom-nav_button-qr').style.transform = "rotate(0deg)";
                                 document.getElementById('bottom-nav_button-qr').style.zIndex = "3";
-                                document.getElementById('qrc').src = "./res/iconaFotografia.png";
+                                document.getElementById('qrc').src = "./res/qr-code.svg";
+                                //document.getElementById('bottom-nav_button-qr').onclick = clickQR();
 
                                 caricaPaginaQR();
+                                bothEmpty();
+                                if(Device_Type() == 'Desktop' /*window.innerHeight < window.innerWidth*/)
+                                    bothEmpty2();
                             }
 				
 			    /*Funzioni per le animazioni dei bottoni "Home" e "Cerca", usate da page_navigation.js*/
