vai plaski tutto tuo

--- a/MIIDMApp-master/info.html
+++ b/MIIDMApp-master/info.html
@@ -21,12 +21,16 @@
   </article> 
   <article class = "informazione" id = "Orari">
     <h1><strong><center>Orari</center></strong></h1>
-    <h5><center>Lun. - Ven.<br>09:00 - 13:00<br>16:00 - 18:00<br><br>Sabato<br>09:00 - 13:00</center></h5>
+    <div id = "crediti">
+      <img src = "res/clock.png"/>
+      <div id = "informazione1"><h5>Lun. - Ven.<br>09:00 - 13:00<br>16:00 - 18:00</h5></div>
+      <div id = "informazione2"><h5>Sabato<br>09:00 - 13:00</h5></div>
+    </div>
   </article>
-  <div id = "Crediti">
+  <article class = "informazione" id = "Crediti">
     <h1><strong><center>Crediti</center></strong></h1>
-    <h5><center>&#149;5^A informatica<br>&#149;Prof. De Bonis Michelangelo<br>&#149;Prof. Tamburrano Pietro<br><br></center></h5>
-  </div>  
+      <h5><center>&#149;5^A informatica<br>&#149;Prof. De Bonis Michelangelo<br>&#149;Prof. Tamburrano Pietro<br><br></center></h5>
+  </article>
 </div>
 
 <script>
