--- a/MIIDMApp-master/info.html
+++ b/MIIDMApp-master/info.html
@@ -21,10 +21,10 @@
   </article> 
   <article class = "informazione" id = "Orari">
     <h1><strong><center>Orari</center></strong></h1>
-    <div id = "crediti">
+    <div id = "orario">
       <img src = "res/clock.png"/>
-      <div id = "informazione1"><h5>Lun. - Ven.<br>09:00 - 13:00<br>16:00 - 18:00</h5></div>
-      <div id = "informazione2"><h5>Sabato<br>09:00 - 13:00</h5></div>
+      <div id = "orario1"><p class = "p1">Lun. - Ven.<br>09:00 - 13:00<br>16:00 - 18:00</p></div>
+      <div id = "orario2"><p class = "p1">Sabato<br>09:00 - 13:00</p></div>
     </div>
   </article>
   <article class = "informazione" id = "Crediti">
