--- a/MIIDMApp-master/info.html
+++ b/MIIDMApp-master/info.html
@@ -23,8 +23,8 @@
     <h1><strong><center>Orari</center></strong></h1>
     <div id = "orario">
       <img src = "res/clock.png"/>
-      <div id = "orario1"><p class = "p1">Lun. - Ven.<br>09:00 - 13:00<br>16:00 - 18:00</p></div>
-      <div id = "orario2"><p class = "p1">Sabato<br>09:00 - 13:00</p></div>
+      <div id = "orario1"><h5>Lun. - Ven.<br>09:00 - 13:00<br>16:00 - 18:00</h5></div>
+      <div id = "orario2"><h5>Sabato<br>09:00 - 13:00</h5></div>
     </div>
   </article>
   <article class = "informazione" id = "Crediti">
