--- a/MIIDMApp-master/info.html
+++ b/MIIDMApp-master/info.html
@@ -29,7 +29,7 @@
   </article>
   <article class = "informazione" id = "Crediti">
     <h1><strong><center>Crediti</center></strong></h1>
-      <h5><center>&#149;5^A informatica<br>&#149;Prof. De Bonis Michelangelo<br>&#149;Prof. Tamburrano Pietro<br><br></center></h5>
+      <h5>&#149;5^A informatica<br>&#149;Prof. De Bonis Michelangelo<br>&#149;Prof. Tamburrano Pietro<br><br></h5>
   </article>
 </div>
 
