--- a/MIIDMApp-master/info.html
+++ b/MIIDMApp-master/info.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
+<head>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+</head>
 
 <p id = "didascaliaInfo">Siamo i ragazzi della <strong>5^A informatica</strong> dell'a.s. 2019/2020 dell'<strong>I.T. "Luigi Di Maggio"</strong> di San Giovanni Rotondo e questo è il nostro lavoro <strong>per voi!</strong></p>
 
 <div id = "info_container_sez">
   <article class = "informazione" id = "Trovaci">
-    <h1><strong><center>Come raggiungerci</center></strong></h1>
+    <!--<h1><strong><center>Come raggiungerci</center></strong></h1>-->
     <div id = "trovandoci">
-      <a href = "https://www.google.it/maps/place/I.S.I.S.+%22Luigi+di+Maggio%22/@41.7020983,15.7272986,17z/data=!3m1!4b1!4m5!3m4!1s0x1337742bfb35d46d:0x58561ae6ec32bb8b!8m2!3d41.7020943!4d15.7294873"> <img src = "res/maps.png" /> </a>
+      <!--<a href = "https://www.google.it/maps/place/I.S.I.S.+%22Luigi+di+Maggio%22/@41.7020983,15.7272986,17z/data=!3m1!4b1!4m5!3m4!1s0x1337742bfb35d46d:0x58561ae6ec32bb8b!8m2!3d41.7020943!4d15.7294873"> <img src = "res/maps.png" /> </a>-->
     </div>
   </article>
   <article class = "informazione" id = "Contatti">
@@ -34,17 +38,40 @@
 </div>
 
 <script>
-  function condividi(){
-    if (navigator.canShare && navigator.canShare({ files: filesArray })) {  
-      navigator.share({
-        title: 'MIIDM App',
-        text: 'Vieni a scoprire il MIIDM!',
-        url: 'https://databasereperti.altervista.org/',
-        })
-        .then(() => console.log('Successful share'))
-        .catch((error) => console.log('Error sharing', error));
-    } else {
-      console.log('Share not supported on this browser, do it the old way.');
-    }
+  var mymap = L.map('trovandoci').setView([51.505, -0.09], 13);
+
+  L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+    maxZoom: 18,
+    attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
+      'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+    id: 'mapbox/streets-v11',
+    tileSize: 512,
+    zoomOffset: -1
+  }).addTo(mymap);
+
+  L.marker([51.5, -0.09]).addTo(mymap)
+    .bindPopup("<b>Hello world!</b><br />I am a popup.").openPopup();
+
+  L.circle([51.508, -0.11], 500, {
+    color: 'red',
+    fillColor: '#f03',
+    fillOpacity: 0.5
+  }).addTo(mymap).bindPopup("I am a circle.");
+
+  L.polygon([
+    [51.509, -0.08],
+    [51.503, -0.06],
+    [51.51, -0.047]
+  ]).addTo(mymap).bindPopup("I am a polygon.");
+
+  var popup = L.popup();
+
+  function onMapClick(e) {
+    popup
+      .setLatLng(e.latlng)
+      .setContent("You clicked the map at " + e.latlng.toString())
+      .openOn(mymap);
   }
+
+  mymap.on('click', onMapClick);
 </script>
