elenco reperti smangiato

--- a/MIIDMApp-master/reperto.html
+++ b/MIIDMApp-master/reperto.html
@@ -1,6 +1,6 @@
   <div id = "pagina_reperto_principale">
     <div id="info">
-      <div id = "rep_titolo">super cazzola magnetica</div>
+      <div id = "rep_titolo">Diego mangia i piedi di Carriera</div>
 			<div  class = "rep_codice" id = "rep_sezione_codassoluto"></div>
     </div>
 	<div class = "rep_descrizioneTitle">Autore</div>
