--- a/MIIDMApp-master/offline.html
+++ b/MIIDMApp-master/offline.html
@@ -1,7 +1,28 @@
-<html>
+<html lang="it" dir="ltr">
     <head>
+        <link rel="icon" href="favicon.ico">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0">
+        <meta name="theme-color" content="#f1c40e">
+
+        <!--Meta tag per iOS-->
+        <link rel="apple-touch-icon" href="res/192x192.png">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="apple-mobile-web-app-title" content="MIIDM App">
+
+        <link rel = "stylesheet" href="style/allstyles.css" />
+        <link rel = "manifest" href = "manifest.json" />
+        
+        <title>MIIDM App offline</title>
     </head>
     <body>
-        <p>Ho fatto, ho fatto la cacasburra</p>
+        <div id = "page_render_offline">
+            <div id = "div_sfondo_home">
+                <p id = "iniziale_offline">
+                    <span id = "offline">Ops, sembra che tu sia offline</span>
+                </p>
+            </div>
+        </div>
     </body>
 </html>
