baciate peppino Steduto

--- a/MIIDMApp-master/segnalaUnBug.html
+++ b/MIIDMApp-master/segnalaUnBug.html
@@ -13,11 +13,12 @@
         <h1 class = "segnalaUnBug_titoloDivForm">Scrivi e-mail</h1>
         <input type="text" id = "oggettoEmail" placeholder="Oggetto">
         <textarea type="text" id = "testoEmail" placeholder="Inserisci il testo dell'e-mail..." class = "segnalaUnBug_altriInput"></textarea>
-        <div id="invia">
-          <button id = "segnalaUnBug_tastoInvia" class="g-recaptcha"
-                  data-sitekey="6LdtJuIUAAAAADtjQhJmfwJzEO_JCby8Lm60ty27"
-                  data-callback='inviaEmail' data-badge="inline">Invia!</button>
-        </div>
+      </div>
+      <div id="invia">
+        <button id = "segnalaUnBug_tastoInvia" class="g-recaptcha"
+                data-sitekey="6LdtJuIUAAAAADtjQhJmfwJzEO_JCby8Lm60ty27"
+                data-callback='inviaEmail' data-badge="inline">Invia!
+        </button>
       </div>
     </div>
     <footer id = "segnalaUnBug_footer" onclick = "chiudiFinestraSegnalazioneBug()">
