--- a/MIIDMApp-master/elencoRepertiUseless.html
+++ b/MIIDMApp-master/elencoRepertiUseless.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="it" dir="ltr">
     <head>
         <meta charset="utf-8">
@@ -10,9 +10,11 @@
         <input type = "text" id = "keyword" placeholder="Parola chiave" /><br />
         <button id = "bottone">CARICA</button>
         <div id = "page_render">
-            <!--Qui verrà renderizzata la pagina-->
+            Qui verrà renderizzata la pagina
         </div>
         <script src = "elencoReperti.js"></script>
     </body>
 </html>
+
+Inutile
 
