--- a/MIIDMApp-master/navbar.html
+++ b/MIIDMApp-master/navbar.html
@@ -1,8 +1,8 @@
 <nav id = "navbar_topNav">
   <div class = "navbar_divIconeTopNav"><img class = "navbar_iconeTopNav" id = "hamburgerButton" src = "./res/hamburgerButton.svg" onclick="navbar_openSidenav()"></img></div>
-  <div id = "navbar_divTitoloTopNav"><a id = "navbar_titoloTopNav">MIIDM App</a></div>
+  <div id = "navbar_divTitoloTopNav"><a id = "navbar_titoloTopNav">DI MAGGIO TECH•SEUM</a></div>
   <div class = "navbar_divIconeTopNav">   
-    <img id = "navbar_logoTopNav" class = "navbar_iconeTopNav" src = "./res/logo2.png"></img>
+    <img id = "navbar_logoTopNav" class = "navbar_iconeTopNav" src = "./res/logo3.png"></img>
     <button id = "navbar_buttonTopNavSearch" class = "navbar_iconeTopNav">
       <img id="navbar_logoTopNavSearch" src="./res/search_e2.svg"/>
     </button>
@@ -52,10 +52,10 @@
       <div class = "navbar_divIconeSelezioniSidenav "><img class = "navbar_iconeSelezioniSidenav " src = "./res/lingua.svg"></img></div>
       <div class = "navbar_divLinkSelezioniSidebar "><a class = "navbar_linkSelezioniSidenav ">Lingua</a></div>
     </div>
-    <div class = "navbar_divSelezioniSidenav" id = "dona_sidebar">
+    <!--<div class = "navbar_divSelezioniSidenav" id = "dona_sidebar">
       <div class = "navbar_divIconeSelezioniSidenav "><img class = "navbar_iconeSelezioniSidenav " src = "./res/sostienici.svg"></img></div>
       <div class = "navbar_divLinkSelezioniSidebar "><a class = "navbar_linkSelezioniSidenav ">Sostienici</a></div>
-    </div>
+    </div>-->
     <div class = "navbar_divSelezioniSidenav" id = "segnala_sidebar">
       <div class = "navbar_divIconeSelezioniSidenav "><img class = "navbar_iconeSelezioniSidenav " src = "./res/segnalaUnBug.svg"></img></div>
       <div class = "navbar_divLinkSelezioniSidebar "><a class = "navbar_linkSelezioniSidenav ">Segnala un bug</a></div>
