Aggiornamento icone e App

--- a/MIIDMApp-master/offline.html
+++ b/MIIDMApp-master/offline.html
@@ -10,12 +10,12 @@
         <link rel="apple-touch-icon" href="res/192x192.png">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <meta name="apple-mobile-web-app-title" content="MIIDM App">
+        <meta name="apple-mobile-web-app-title" content="Di Maggio Tech Seum">
 
         <link rel = "stylesheet" href="style/allstyles.css" />
         <link rel = "manifest" href = "manifest.json" />
         
-        <title>MIIDM App offline</title>
+        <title>Di Maggio Tech Seum offline</title>
     </head>
     <body>
         <div id = "page_render_offline">
