--- a/MIIDMApp-master/info.html
+++ b/MIIDMApp-master/info.html
@@ -6,16 +6,16 @@
   <article class = "informazione" id = "Trovaci">
     <h1><strong><center>Come raggiungerci</center></strong></h1>
     <div id = "trovandoci">
-      <a href = "https://www.google.it/maps/place/I.S.I.S.+%22Luigi+di+Maggio%22/@41.7020983,15.7272986,17z/data=!3m1!4b1!4m5!3m4!1s0x1337742bfb35d46d:0x58561ae6ec32bb8b!8m2!3d41.7020943!4d15.7294873"> <img src = "res/maps.png" /> </a>
+      <a href = "https://goo.gl/maps/ag7kyTkMSLc3BBuf7"> <img src = "res/maps.png" /> </a>
     </div>
   </article>
   <article class = "informazione" id = "Contatti">
     <h1><strong><center>Contattaci</center></strong></h1>
     <div id = "contattaci">
-      <img src = "res/mail.png" id = "mail" onclick = "window.location = 'mailto:pippopluto@gmail.com'" />
-      <img src = "res/phone.png" id = "phone" onclick = "window.location = 'tel:1234567890'" />
-      <a id = "facebook" href = ""> <img src = "res/facebook.png" /> </a>
-      <a id = "instagram" href = "https://www.instagram.com/miidm_isis/"> <img src = "res/instagram.png" /> </a>
+      <img src = "res/mail.png" id = "mail" onclick = "window.location = 'mailto:fgtf17000v@istruzione.it'" />
+      <img src = "res/phone.png" id = "phone" onclick = "window.location = 'tel:08822456519'" />
+      <a id = "facebook" href = "https://www.facebook.com/DI-Maggio-Tech-seum-100292315518235/"> <img src = "res/facebook.png" /> </a>
+      <a id = "instagram" href = "https://instagram.com/dimaggiotechseum"> <img src = "res/instagram.png" /> </a>
       <img src = "res/share.png" id = "share" onclick="condividi()" />
     </div>
   </article> 
@@ -23,8 +23,8 @@
     <h1><strong><center>Orari</center></strong></h1>
     <div id = "orario">
       <img src = "res/clock.png"/>
-      <div id = "orario1"><h5>Lun. - Ven.<br>09:00 - 13:00<br>16:00 - 18:00</h5></div>
-      <div id = "orario2"><h5>Sabato<br>09:00 - 13:00</h5></div>
+      <div id = "orario1"><h5>Lun. - Sab.<br>08:00 - 13:00<!--<br>16:00 - 18:00--></h5></div>
+      <!--<div id = "orario2"><h5>Sabato<br>09:00 - 13:00</h5></div>-->
     </div>
   </article>
   <article class = "informazione" id = "Crediti">
